<resources>
    <string name="app_name">VisitorManagement</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="headingServerError">Server Error!</string>
    <string name="server_error">Oops an error occurred!\nPlease try again later.</string>
    <string name="REGISTERED_EMAIL">Already registered with us, please use a different email!</string>
    <string name="invalid_user">Invalid user</string>
    <string name="signIn">Login</string>
    <string name="login_required">Please login to continue!</string>
    <string name="headingNetworkError">Network Error</string>
    <string name="msgNetworkError">A network error occurred while communicating with the server.\nPlease check your internet connection!</string>
    <string name="weAreDown">We are down for maintenance!</string>
    <string name="serviceUnavailable">Service is temporarily unavailable. Please come back after sometime!</string>
    <string name="headingConnectionOffline">Connection Offline</string>
    <string name="connectionOffline">Cannot proceed with the operation. No network connection!\nPlease check your Internet connection</string>
    <string name="store_to_local_db_title">No network connection!</string>
    <string name="no_network_label">No network connection!</string>
    <string name="no_network_label_for_workbook_type">Inter connection is must for creating Workbook type!</string>
    <string name="insert">INSERT</string>
    <string name="record_inserted">Record inserted successfully</string>
    <string name="store_to_local_db">Please check your Internet connection,\n Press Insert to store data locally.</string>
    <string name="please_wait">Please wait...</string>
    <string name="ok">OK</string>
    <string name="yesTxt">Yes</string>
    <string name="noTxt">No</string>
    <string name="cancel">Cancel</string>
    <string name="permission_rationale_dialog_title">Permission required</string>
    <string name="action_settings">Settings</string>

    <string name="name">Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="error_field_name">Characters only</string>
    <string name="vehicle_no">Vehicle Number</string>
    <string name="from_place">From Place</string>
    <string name="dest_place">Destination Place</string>
    <string name="workbook_type">WorkBook Type</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>

    <string name="in_time">In Time</string>
    <string name="out_time">Out Time</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="contactNoMin10">Enter a valid 10 digit mobile number.</string>
    <string name="upload_visitor_img">Picture</string>
    <string name="upload_visitor_sign">Signature</string>
    <string name="create_visitor">Create Visitor</string>
    <string name="workbook_home">WorkBook</string>
    <string name="create_workbook">Create WorkBook</string>
    <string name="visitor_listing">Visitors</string>
    <string name="enter_work_book_name">WorkBook Name</string>
    <string name="create">Create</string>
    <string name="select_workbook_type">Please select workbook type</string>
    <string name="error_while_getting_data">Error while getting workbook type data</string>
    <string name="select_visitor_mandatory">Please select visitor\'s fields, that you need as mandatory!</string>
    <string name="v_sign_mandatory">Visitor signature is mandatory!</string>
    <string name="v_image_mandatory">Visitor photo is mandatory!</string>
    <string name="client_error">Something went wrong on client side, Please try again later!</string>
    <string name="hint_search">Search by name</string>
    <string name="search">Search</string>
    <string name="fill_at_least_one_field">Enter at-least one field</string>
    <string name="empty_response_msg">No data available to retrieve!</string>
    <string name="enter_wor_book_type">Please Enter Workbook type:</string>
    <string name="submit">Submit</string>

    <string-array name="randomColors" translatable="false">
        <item>#99cc00</item>
        <item>#33b5e5</item>
        <item>#0099cc</item>
        <item>#547bca</item>
        <item>#aa66cc</item>
        <item>#9933cc</item>
        <item>#E79F30</item>
        <item>#aeb857</item>
        <item>#cc0000</item>
        <item>#df5948</item>
        <item>#ff4444</item>
        <item>#ae6b23</item>
        <item>#ff8800</item>
        <item>#e5ae4f</item>
        <item>#ffbb33</item>
    </string-array>



</resources>
