<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/txtHint"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_medium_large"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:layout_alignParentTop="true"
        android:text="@string/enter_wor_book_type"
        android:textStyle="bold"
        android:textSize="@dimen/large_text_size"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/editTextWorkBookTypeName"
        android:layout_width="match_parent"

        android:layout_below="@id/txtHint"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/workbook_type"
        android:layout_margin="@dimen/margin_normal"
        android:inputType="text"
        android:paddingLeft="@dimen/padding_small"
        android:paddingRight="@dimen/padding_small"
        android:textColor="@color/uiv3_address_input_color"
        android:textColorHint="@color/uiv3_secondary_text_color"
        android:textSize="@dimen/secondary_text_size" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:layout_alignParentRight="true"
        android:layout_below="@id/editTextWorkBookTypeName"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtCancel"
            android:text="@string/cancel"
            android:paddingLeft="@dimen/margin_normal"
            android:paddingRight="@dimen/margin_normal"
            android:paddingTop="@dimen/margin_small"
            android:paddingBottom="@dimen/margin_small"
            android:layout_width="wrap_content"
            android:background="@color/accent"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtSubmit"
            android:layout_marginLeft="@dimen/margin_normal"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:background="@color/accent"
            android:paddingLeft="@dimen/margin_normal"
            android:paddingRight="@dimen/margin_normal"
            android:paddingTop="@dimen/margin_small"
            android:paddingBottom="@dimen/margin_small"
            android:onClick="onSubmitBtmClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>


</RelativeLayout>