<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layoutCreateVisitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="none">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_small"
                android:theme="@style/TextInputLayoutStyle"
                app:errorTextAppearance="@style/ErrorStyle">

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:maxLength="30"
                    android:paddingLeft="@dimen/padding_small"
                    android:textColor="@color/uiv3_address_input_color"
                    android:textColorHint="@color/uiv3_secondary_text_color"
                    android:textSize="@dimen/secondary_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_small"
                android:theme="@style/TextInputLayoutStyle"
                app:errorTextAppearance="@style/ErrorStyle">

                <EditText
                    android:id="@+id/editTextMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="1234567890"
                    android:ems="10"
                    android:hint="@string/mobileNumber"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:paddingLeft="@dimen/padding_small"
                    android:textColor="@color/uiv3_address_input_color"
                    android:textColorHint="@color/uiv3_secondary_text_color"
                    android:textSize="@dimen/secondary_text_size" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/textVehicleNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_small"
                android:theme="@style/TextInputLayoutStyle"
                app:errorTextAppearance="@style/ErrorStyle">

                <EditText
                    android:id="@+id/editTextVehicleNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/vehicle_no"
                    android:inputType="textPostalAddress"
                    android:paddingLeft="@dimen/padding_small"
                    android:paddingRight="@dimen/padding_small"
                    android:textColor="@color/uiv3_address_input_color"
                    android:textColorHint="@color/uiv3_secondary_text_color"
                    android:textSize="@dimen/secondary_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputFromPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_small"
                android:theme="@style/TextInputLayoutStyle"
                app:errorTextAppearance="@style/ErrorStyle">

                <EditText
                    android:id="@+id/editTextFromPlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/from_place"
                    android:inputType="textPostalAddress"
                    android:paddingLeft="@dimen/padding_small"
                    android:paddingRight="@dimen/padding_small"
                    android:textColor="@color/uiv3_address_input_color"
                    android:textColorHint="@color/uiv3_secondary_text_color"
                    android:textSize="@dimen/secondary_text_size" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputDestinationPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_small"
                android:theme="@style/TextInputLayoutStyle"
                app:errorTextAppearance="@style/ErrorStyle">

                <EditText
                    android:id="@+id/editTextDestinationPlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/dest_place"
                    android:inputType="textPostalAddress"
                    android:paddingLeft="@dimen/padding_small"
                    android:paddingRight="@dimen/padding_small"
                    android:textColor="@color/uiv3_address_input_color"
                    android:textColorHint="@color/uiv3_secondary_text_color"
                    android:textSize="@dimen/secondary_text_size" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputEditTextStartDatePicker"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:layout_marginRight="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_small"
                    android:theme="@style/TextInputLayoutStyle"
                    app:errorTextAppearance="@style/ErrorStyle">

                    <EditText
                        android:id="@+id/editTextStartDatePicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/start_date"
                        android:focusable="false"
                        android:inputType="date"
                        android:onClick="onStartDatePickerClick"
                        android:paddingLeft="@dimen/padding_small"
                        android:paddingRight="@dimen/padding_small"
                        android:textColor="@color/uiv3_address_input_color"
                        android:textColorHint="@color/uiv3_secondary_text_color"
                        android:textSize="@dimen/secondary_text_size" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputEditTextEndDatePicker"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:layout_marginRight="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_small"
                    android:theme="@style/TextInputLayoutStyle"
                    app:errorTextAppearance="@style/ErrorStyle">

                    <EditText
                        android:id="@+id/editTextEndDatePicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/end_date"
                        android:inputType="date"
                        android:onClick="onEndDatePickerClick"
                        android:focusable="false"
                        android:paddingLeft="@dimen/padding_small"
                        android:paddingRight="@dimen/padding_small"
                        android:textColor="@color/uiv3_address_input_color"
                        android:textColorHint="@color/uiv3_secondary_text_color"
                        android:textSize="@dimen/secondary_text_size" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputInTime"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:layout_marginRight="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_small"
                    android:theme="@style/TextInputLayoutStyle"
                    app:errorTextAppearance="@style/ErrorStyle">

                    <EditText
                        android:id="@+id/editTextInTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/in_time"
                        android:focusable="false"
                        android:inputType="time"
                        android:onClick="onInTimeClick"
                        android:paddingLeft="@dimen/padding_small"
                        android:paddingRight="@dimen/padding_small"
                        android:textColor="@color/uiv3_address_input_color"
                        android:textColorHint="@color/uiv3_secondary_text_color"
                        android:textSize="@dimen/secondary_text_size" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputOutTime"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:layout_marginRight="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_small"
                    android:theme="@style/TextInputLayoutStyle"
                    app:errorTextAppearance="@style/ErrorStyle">

                    <EditText
                        android:id="@+id/editTextOutTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/out_time"
                        android:inputType="time"
                        android:onClick="onOutTimeClick"
                        android:focusable="false"
                        android:paddingLeft="@dimen/padding_small"
                        android:paddingRight="@dimen/padding_small"
                        android:textColor="@color/uiv3_address_input_color"
                        android:textColorHint="@color/uiv3_secondary_text_color"
                        android:textSize="@dimen/secondary_text_size" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/btnSearch"
        style="@style/ButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:onClick="onSearchBtnClicked"
        android:layout_marginTop="@dimen/margin_normal"
        android:paddingBottom="@dimen/padding_small"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal"
        android:paddingTop="@dimen/padding_small"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textSize="@dimen/primary_text_size" />

</RelativeLayout>
